# gh-emu-migration

./: .gitignore  LICENSE  LIVE_TESTING_GUIDE.md  README.md  TESTING.md  config.example.yaml  pyproject.toml
packaging/: build.sh  emu_migration.spec
reports/: demo-migration-report.md
src/emu_migration/: __init__.py  _console.py  assessment.py  cli.py  config.py  demo.py  desktop.py  desktop_api.py  emu_migration.py  gei.py  github_client.py  models.py  report.py  sso_migration.py
src/emu_migration/ui/: app.js  index.html  styles.css
tests/: live_test.py  setup_entra_id.py  setup_test_org.py  test_core.py
