[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-emu-migration"
version = "0.1.0"
description = "POC: GitHub Enterprise ADFS→Entra ID SSO + EMU Migration Tool"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3",
    "pyyaml>=6.0,<7",
    "rich>=13.0,<14",
    "click>=8.1,<9",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff"]

[project.scripts]
emu-migrate = "emu_migration.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
